examples/myexamples/frontend/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      volumes:
        - configMap:
            name: frontend-conf
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: server.conf
                path: conf.d/server.conf
          name: nginx-conf-volume
        - emptyDir: {}
          name: html-volume
      containers:
        - name: nginx
          image: nginx:stable
          imagePullPolicy: IfNotPresent
          # command:
          #   - ./nginx
          # args:
          #   - -c /etc/nginx/nginx.conf
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
            tcpSocket:
              port: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-conf-volume
              subPath: nginx.conf
            - mountPath: /etc/nginx/conf.d
              name: nginx-conf-volume
              subPath: conf.d
            - mountPath: /usr/share/nginx
              name: html-volume
      initContainers: # 初始化执行容器, 执行后退出. 将静态文件拷贝到挂载目录, 与nginx-container实现共享.
        - name: html
          image: 850278995/frontend:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /share/html
              name: html-volume
